--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
       - id: flake8
         additional_dependencies: [flake8-bugbear]
         language_version: python3
+        args: [--config=.flake8]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
